--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,100 @@
-.App {
+.container {
   text-align: center;
+  width: 100%;
+  position: absolute;
+  /* top: 30%; */
+  height: 90%;
+}
+h3 {
+  margin-top:12%;
+  font-size: 2em;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+p{
+  font-size: 1.2em;
+  text-transform: capitalize;
+}
+body{
+  -webkit-animation: fadein 1.5s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+   -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+       animation: fadein 2s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.activeFadeIn {
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 2s; /* Firefox < 16 */
+   -ms-animation: fadein 2s; /* Internet Explorer */
+    -o-animation: fadein 2s; /* Opera < 12.1 */
+       animation: fadein 2s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.fetch-button{
+  padding: 10px;
+  font-size: .7em;
+  color:white;
+  cursor:pointer;
+  background-color: black;
+  width: 133px;
+  border-radius: 5px;
+  margin-left: 20\px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.fetch-button:focus {
+  outline: none;
+}
+.share {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.fixed-bottom {
+  position: absolute;
+  bottom: 15%;
+  /* text-align: center; */
+  width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+@media (min-width: 1281px) {
+  
+  .fixed-bottom {
+    /* position: absolute; */
+    bottom: 30%;
+    /* text-align: center; */
+    /* width: 100%; */
   }
-  to {
-    transform: rotate(360deg);
+  h3 {
+    margin-top: 150px !important;
   }
+  
 }
